hotfix(style.css) : Fixed Chat Loading Bubble Background for Dark Mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,8 @@
 	--chat-bg: #0d082c;
 	--chat-input-shadow: none;
 	--chat-input-color: #fff;
+	--chat-bubble-bg: #6F699B;
 }
-
 /**
  * Load Fonts*/
 /* source-sans-3-regular - latin */
